fixed login and register ui NEXT: dark mode

--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -14,7 +14,7 @@
 /* Custom Components */
 @layer components {
     .link {
-        @apply text-[14px] hover:text-[#3B82F6] transition-colors duration-200;
+        @apply text-[14px] hover:text-[#3B82F6] transition-colors duration-200 hover:underline;
     }
     .col-body-container {
         @apply flex flex-col gap-y-6 px-15;
@@ -31,6 +31,13 @@
     .header-icon {
         @apply rounded-lg p-2 hover:cursor-pointer hover:bg-gray-200;
     }
+    .username-input {
+        @apply w-auto h-8 self-center border-x-0 border-t-0 border-b-1 outline-none
+    }
+    .login-register-input {
+        @apply w-full h-8 self-center border-x-0 border-t-0 border-b-1 outline-none;
+    }
+
 }
 
 /* Custom Base styles */
@@ -48,13 +55,10 @@
         @apply text-lg;
     }
     form {
-        @apply w-full flex flex-col max-w-sm bg-white p-8 rounded-lg shadow-md space-y-6 border border-gray-200 self-center
+        @apply w-full flex flex-col max-w-sm bg-white p-8 rounded-lg shadow-md space-y-6 border border-gray-200 self-center mb-2
     }
     button {
         @apply text-[13px] py-1.5 bg-green-600 hover:bg-green-700 w-17 rounded-md font-semibold self-center text-white
-    }
-    input {
-        @apply w-auto h-8 self-center border-x-0 border-t-0 border-b-1 outline-none
     }
     hr {
         @apply border-t border-gray-300
